# pyqt5_learn

./: README.md  combo.py  hello.py  pyproject.toml  spin.py
