[tool.poetry]
name = "pyqt5-learn"
version = "0.1.0"
description = ""
authors = ["yenaras <brandon82890@gmail.com>"]
readme = "README.md"
packages = [{include = "pyqt5_learn"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
